[package]
name = "rsdsl_netfilterd"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
rustables = { git = "https://github.com/rsdsl/rustables.git", version = "0.11.0" }
thiserror = "1.0"
