[package]
name = "rsdsl_netfilterd"
version = "0.5.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
ipnetwork = "0.20.0"
rustables = { git = "https://github.com/rsdsl/rustables.git", version = "0.14.0" }
thiserror = "1.0"
