[package]
name = "rsdsl_netfilterd"
version = "0.7.0-dev"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
failure = "0.1.8"
ipnetwork = "0.20.0"
rsdsl_pd_config = { git = "https://github.com/rsdsl/pd_config.git", version = "0.1.0" }
rustables = { git = "https://github.com/rsdsl/rustables.git", version = "0.14.0" }
serde_json = "1.0"
signal-hook = "0.3.17"
thiserror = "1.0"
